// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderItem should render 1`] = `
<div>
  <h3>
    test1
  </h3>
  <div
    className="form-group"
  >
    <label
      htmlFor="1-test1-columnType"
    >
      Field type
    </label>
    <select
      className="form-control"
      id="1-test1-columnType"
      value=""
    >
      <option
        key=""
        value=""
      >
        Nothing
      </option>
      <option
        key="COLUMN_NAME"
        value="COLUMN_NAME"
      >
        Full name
      </option>
      <option
        key="COLUMN_FIRST_NAME"
        value="COLUMN_FIRST_NAME"
      >
        First name
      </option>
      <option
        key="COLUMN_LAST_NAME"
        value="COLUMN_LAST_NAME"
      >
        Last name
      </option>
      <option
        key="COLUMN_MBOX"
        value="COLUMN_MBOX"
      >
        Identifier mbox
      </option>
      <option
        key="COLUMN_MBOXSHA1SUM"
        value="COLUMN_MBOXSHA1SUM"
      >
        Identifier mbox sha1sum
      </option>
      <option
        key="COLUMN_OPENID"
        value="COLUMN_OPENID"
      >
        Identifier open id
      </option>
      <option
        key="COLUMN_ACCOUNT_KEY"
        value="COLUMN_ACCOUNT_KEY"
      >
        Account home page
      </option>
      <option
        key="COLUMN_ACCOUNT_VALUE"
        value="COLUMN_ACCOUNT_VALUE"
      >
        Account name
      </option>
      <option
        key="COLUMN_ATTRIBUTE_DATA"
        value="COLUMN_ATTRIBUTE_DATA"
      >
        Attribute value
      </option>
    </select>
  </div>
</div>
`;

exports[`HeaderItem should render with orderable and related column 1`] = `
<div>
  <h3>
    test1
  </h3>
  <div
    className="form-group"
  >
    <label
      htmlFor="1-test1-columnType"
    >
      Field type
    </label>
    <select
      className="form-control"
      id="1-test1-columnType"
      value=""
    >
      <option
        key=""
        value=""
      >
        Nothing
      </option>
      <option
        key="COLUMN_NAME"
        value="COLUMN_NAME"
      >
        Full name
      </option>
      <option
        key="COLUMN_FIRST_NAME"
        value="COLUMN_FIRST_NAME"
      >
        First name
      </option>
      <option
        key="COLUMN_LAST_NAME"
        value="COLUMN_LAST_NAME"
      >
        Last name
      </option>
      <option
        key="COLUMN_MBOX"
        value="COLUMN_MBOX"
      >
        Identifier mbox
      </option>
      <option
        key="COLUMN_MBOXSHA1SUM"
        value="COLUMN_MBOXSHA1SUM"
      >
        Identifier mbox sha1sum
      </option>
      <option
        key="COLUMN_OPENID"
        value="COLUMN_OPENID"
      >
        Identifier open id
      </option>
      <option
        key="COLUMN_ACCOUNT_KEY"
        value="COLUMN_ACCOUNT_KEY"
      >
        Account home page
      </option>
      <option
        key="COLUMN_ACCOUNT_VALUE"
        value="COLUMN_ACCOUNT_VALUE"
      >
        Account name
      </option>
      <option
        key="COLUMN_ATTRIBUTE_DATA"
        value="COLUMN_ATTRIBUTE_DATA"
      >
        Attribute value
      </option>
    </select>
  </div>
</div>
`;

exports[`HeaderItem should render with orderable when disabled 1`] = `
<div>
  <h3>
    test1
  </h3>
  <div
    className="form-group"
  >
    <label
      htmlFor="1-test1-columnType"
    >
      Field type
    </label>
    <select
      className="form-control"
      disabled={true}
      id="1-test1-columnType"
      value=""
    >
      <option
        key=""
        value=""
      >
        Nothing
      </option>
      <option
        key="COLUMN_NAME"
        value="COLUMN_NAME"
      >
        Full name
      </option>
      <option
        key="COLUMN_FIRST_NAME"
        value="COLUMN_FIRST_NAME"
      >
        First name
      </option>
      <option
        key="COLUMN_LAST_NAME"
        value="COLUMN_LAST_NAME"
      >
        Last name
      </option>
      <option
        key="COLUMN_MBOX"
        value="COLUMN_MBOX"
      >
        Identifier mbox
      </option>
      <option
        key="COLUMN_MBOXSHA1SUM"
        value="COLUMN_MBOXSHA1SUM"
      >
        Identifier mbox sha1sum
      </option>
      <option
        key="COLUMN_OPENID"
        value="COLUMN_OPENID"
      >
        Identifier open id
      </option>
      <option
        key="COLUMN_ACCOUNT_KEY"
        value="COLUMN_ACCOUNT_KEY"
      >
        Account home page
      </option>
      <option
        key="COLUMN_ACCOUNT_VALUE"
        value="COLUMN_ACCOUNT_VALUE"
      >
        Account name
      </option>
      <option
        key="COLUMN_ATTRIBUTE_DATA"
        value="COLUMN_ATTRIBUTE_DATA"
      >
        Attribute value
      </option>
    </select>
  </div>
</div>
`;
